# gr-engine-rs

./: .gitignore  .project  Cargo.toml  README.md
demos/shapiro/: Cargo.toml
demos/shapiro/src/: main.rs
src/: entity.rs  lib.rs  particle.rs
src/coord_systems/: mod.rs
src/coord_systems/kerr/: eddington.rs  mod.rs  polar_eddington.rs
src/coord_systems/schwarzschild/: eddington.rs  mod.rs  polar_eddington.rs  polar_schwarzschild.rs  schwarzschild.rs
src/numeric/: dormand_prince.rs  integrators.rs  mod.rs  rk4.rs  state_vector.rs  traits.rs
