[package]
name = "gr-engine"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]

[dependencies]
differential-geometry = { git = "https://github.com/fizyk20/differential-geometry.git", branch="master" }
generic-array = "*"
typenum = "*"
numeric-algs = { git = "https://github.com/fizyk20/numeric-algs.git", branch="master" }
